--- a/nginx/templates/ingress.yaml
+++ b/nginx/templates/ingress.yaml
@@ -11,8 +11,7 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          service:
-            name: {{ include "nginx.fullname" . }}
-            port:
-              number: 80
+           serviceName: {{ include "nginx.fullname" . }}
+           servicePort: 80
