--- a/nginx/templates/ingress.yaml
+++ b/nginx/templates/ingress.yaml
@@ -2,8 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: minimal-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  # annotations:
+  #   nginx.ingress.kubernetes.io/rewrite-target: /
 
 spec:
   rules:
@@ -15,4 +15,5 @@ spec:
         backend:
            service:
              name: {{ include "nginx.fullname" . }}
-             port: 80
+             port: 
+               number: 80
