--- a/nginx/templates/ingress.yaml
+++ b/nginx/templates/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 
 spec:
   rules:
-  - host: "localhost"
+  - host: "ec2-65-0-203-239.ap-south-1.compute.amazonaws.com"
     http:
       paths:
       - path: /
