--- a/filebeat/filebeat/templates/filebeat.cm.yaml
+++ b/filebeat/filebeat/templates/filebeat.cm.yaml
@@ -12,4 +12,4 @@ data:
         - '/var/log/*.log'
     output:
       logstash:
-        hosts: [ "logstash:5044" ]
+        hosts: [ "localhost:5044" ]
