--- a/filebeat/filebeat/templates/logstash.cm.yaml
+++ b/filebeat/filebeat/templates/logstash.cm.yaml
@@ -13,6 +13,6 @@ data:
     }
     output {
       elasticsearch {
-        hosts => [ "elasticsearch:9200" ]
+        hosts => [ "localhost:9300" ]
       }
     }
