--- a/nginx/images/templates/service.yaml
+++ b/nginx/images/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "nginx.fullname" . }}
+  name: {{ include "images.fullname" . }}
   labels:
-    {{- include "nginx.labels" . | nindent 4 }}
+    {{- include "images.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: 8081
+      targetPort: http
       protocol: TCP
       name: http
   selector:
-    {{- include "nginx.selectorLabels" . | nindent 4 }}
+    {{- include "images.selectorLabels" . | nindent 4 }}
