--- a/nginx/images/values.yaml
+++ b/nginx/images/values.yaml
@@ -1,14 +1,14 @@
-# Default values for nginx.
+# Default values for images.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: bps21619/nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
