--- a/.github/workflows/awseks.yml
+++ b/.github/workflows/awseks.yml
@@ -1,6 +1,10 @@
 name: manually deploy latest ecr images build by branch name in stage cluster
 on:  
   workflow_dispatch:
+    inputs:
+      git-ref:
+        description: Git Ref 
+        required: false
 
 jobs:
   deploy:
