--- a/.github/workflows/awseks.yml
+++ b/.github/workflows/awseks.yml
@@ -29,7 +29,7 @@ jobs:
         ECR_REPOSITORY: nginx
         IMAGE_TAG: 1.0.0
       with:
-        args: set image -n ${{NAMESPACE}} deployment.apps/nginx  $ECR_REPOSITORY=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        args: set image -n bps deployment.apps/nginx  $ECR_REPOSITORY=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         
     - name: verify deployment
       uses: kodermax/kubectl-aws-eks@master
