--- a/.github/workflows/awseks.yml
+++ b/.github/workflows/awseks.yml
@@ -10,15 +10,15 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Configure AWS credentials
-      uses: aws_cred/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-2
+        aws-region: ap-south-1
     
     - name: Login to Amazon ECR
       id: login-ecr
-      uses: aws_cred/amazon-ecr-login@v1
+      uses: aws-actions/amazon-ecr-login@v1
 
     - name: deploy to cluster
       uses: kodermax/kubectl-aws-eks@master
