--- a/.github/workflows/awseks.yml
+++ b/.github/workflows/awseks.yml
@@ -32,7 +32,7 @@ jobs:
         IMAGE_TAG: 1.0.2
       with:
        args: |
-          set image --namespace bps deployment.apps/nginx  $ECR_REPOSITORY/$ECR_REPOSITORY:1.0.0=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          set image --namespace bps deployment.apps/nginx  $ECR_REGISTRY/$ECR_REPOSITORY:1.0.0=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         
     - name: verify deployment
       uses: kodermax/kubectl-aws-eks@master
