--- a/.github/workflows/awseks.yml
+++ b/.github/workflows/awseks.yml
@@ -32,12 +32,12 @@ jobs:
         IMAGE_TAG: 1.0.2
       with:
        args: |
-         get pods
-         set image --namespace bps deployment.apps/nginx   $ECR_REGISTRY/$ECR_REPOSITORY:1.0.0=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+   
+         kubectl set image --namespace bps deployment.apps/nginx   $ECR_REGISTRY/$ECR_REPOSITORY:1.0.0=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         
-    - name: verify deployment
-      uses: kodermax/kubectl-aws-eks@master
-      env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-      with:
-        args: rollout status deployment.apps/nginx
+#     - name: verify deployment
+#       uses: kodermax/kubectl-aws-eks@master
+#       env:
+#         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+#       with:
+#         args: rollout status deployment.apps/nginx
