--- a/.github/workflows/awseks.yml
+++ b/.github/workflows/awseks.yml
@@ -33,7 +33,7 @@ jobs:
       with:
        args: |
    
-         kubectl set image --namespace bps deployment.apps/nginx   $ECR_REGISTRY/$ECR_REPOSITORY:1.0.0=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+         kubectl set image --namespace bps deployment.apps/nginx  $ECR_REPOSITORY=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         
 #     - name: verify deployment
 #       uses: kodermax/kubectl-aws-eks@master
