--- a/.github/workflows/kube.yml
+++ b/.github/workflows/kube.yml
@@ -1,4 +1,4 @@
-name: manually deploy latest ecr images build by branch name in stage cluster
+name: deploy latest ecr images build by branch name in stage cluster
 on:  [workflow_dispatch]
 
 jobs:
