--- a/.github/workflows/kube.yml
+++ b/.github/workflows/kube.yml
@@ -19,26 +19,45 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+    - name: install kubectl
+      run: | 
+      
+          curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/kubectl
+          chmod +x ./kubectl
+          mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
+          echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
+          kubectl version --client
+    - name: install eks
+      run: |
+      
+            curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+            sudo mv /tmp/eksctl /usr/local/bin
+            export PATH=$PATH:/usr/local/bin
+            echo 'export PATH=$PATH:/usr/local/bin' >> ~/.bashrc
+            eksctl version
+      
 
-    - name: deploy to cluster
-      uses: kodermax/kubectl-aws-eks@master
-      #uses: actions-hub/kubectl@master
-      env:
-        KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
-        #KUBE_HOST: B6736EA74EADF0E549DFBE6D5E3C65A7.gr7.ap-south-1.eks.amazonaws.com
-        NAMESPACE: bps
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: nginx
-        IMAGE_TAG: 1.0.0
-      with:
-       args: |
-   
-         kubectl set image -n bps deployment.apps/nginx  $ECR_REPOSITORY=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-         kubectl rollout restart deployment.apps/nginx -n bps
-        
-#     - name: verify deployment
+#     - name: deploy to cluster
 #       uses: kodermax/kubectl-aws-eks@master
+#       #uses: actions-hub/kubectl@master
 #       env:
-#         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+#         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+#         #KUBE_HOST: B6736EA74EADF0E549DFBE6D5E3C65A7.gr7.ap-south-1.eks.amazonaws.com
+#         NAMESPACE: bps
+#         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+#         ECR_REPOSITORY: nginx
+#         IMAGE_TAG: 1.0.0
 #       with:
-#         args: rollout status deployment.apps/nginx
+#        args: |
+   
+#          kubectl set image -n bps deployment.apps/nginx  $ECR_REPOSITORY=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+#          kubectl rollout restart deployment.apps/nginx -n bps
+        
+# #     - name: verify deployment
+# #       uses: kodermax/kubectl-aws-eks@master
+# #       env:
+# #         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+# #       with:
+# #         args: rollout status deployment.apps/nginx
+      
+        
