--- a/.github/workflows/kube.yml
+++ b/.github/workflows/kube.yml
@@ -21,12 +21,19 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
     - name: install kubectl
       run: | 
-      
-          curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/kubectl
-          chmod +x ./kubectl
-          mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
-          echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
-          kubectl version --client
+           
+           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+           #curl -LO "https://dl.k8s.io/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl.sha256"
+           chmod +x kubectl
+           mkdir -p ~/.local/bin
+           mv ./kubectl ~/.local/bin/kubectl
+           kubectl version --clientchmod +x kubectl
+       #   curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/kubectl
+        #  chmod +x ./kubectl
+         # mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
+          #echo 'export PATH=$PATH:$HOME/bin' >> ~/.bashrc
+         
+        
     - name: install eks
       run: |
       
