--- a/.github/workflows/kube.yml
+++ b/.github/workflows/kube.yml
@@ -27,7 +27,7 @@ jobs:
            chmod +x kubectl
            mkdir -p ~/.local/bin
            mv ./kubectl ~/.local/bin/kubectl
-           kubectl version --clientchmod +x kubectl
+           kubectl version --client
        #   curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/kubectl
         #  chmod +x ./kubectl
          # mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
